<resources>
    <string name="app_name">CloudLocker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_enter_id">Enter your Id</string>
    <string name="string_choose_password">Enter your password</string>
    <string name="string_enter_name">Enter your name</string>
    <string name="string_enter_studentID">Enter your student id</string>
    <string name="button_register">Register</string>
</resources>